tests/reference/asr-complex_07-71c3c47.stderr
semantic error: Value of a save or parameter variable must evaluate to a compile time constant
 --> tests/../integration_tests/complex_07.f90:5:5
  |
5 |     complex :: x = cmplx(real_part)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
